# Notes

./: README.md  未命名绘图.drawio
RAII/: CMakeLists.txt  main.cpp  mutex.cpp  mutex.h  mutexlock.h
animation/: animation.pro  img.qrc  widget.cpp  widget.h  widget.ui
cplusplusthings/: record.md
myproject/: CMakeLists.txt  kcm.cpp  kcm.h  kcm_myproject.desktop
myproject/package/: metadata.desktop
myproject/package/contents/ui/: main.qml
network/: CMakeLists.txt  main.cpp
